--- a/main/views/error.jade
+++ b/main/views/error.jade
@@ -1,5 +1,6 @@
 extends layout
 block content
-  .content
-    h2 An error occurred
-    p= message
+  .news
+    .content
+      h2 An error occurred
+      p= message
