--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -26,12 +26,10 @@ block content
       a.example#ip(href="#")= exampleIp
       | (results are in milliseconds)
   div(style='padding: 10px; margin: auto; width: 728px; height: 90px;')
-    script(type='text/javascript')
-      google_ad_client = "ca-pub-7232387343839256";
-      google_ad_slot = "5556126529";
-      google_ad_width = 728;
-      google_ad_height = 90;
-    script(type='text/javascript', src='//pagead2.googlesyndication.com/pagead/show_ads.js')
+    script(type='text/javascript').
+      var cpmstar_rnd=Math.round(Math.random()*999999);
+      var cpmstar_pid=30086;
+      document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
   #pingResultWrapper.wrapper.hidden
     #pingResults.results
       table#pingTable.table.table-bordered
