minor design change updated ad code

--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -25,7 +25,7 @@ block content
       | or
       a.example#ip(href="#")= exampleIp
       | (results are in milliseconds)
-  div(style='padding: 10px; margin: auto; width: 728px; height: 90px;')
+  div(style='padding: 10px 0; margin: auto; width: 728px; height: 110px;')
     script(type='text/javascript').
       var cpmstar_rnd=Math.round(Math.random()*999999);
       var cpmstar_pid=30086;
