--- a/main/views/index.jade
+++ b/main/views/index.jade
@@ -8,7 +8,6 @@ append js
 block content
   +alerts()
   .main
-    p.site-description Free online ping test service with multiple locations worldwide
     form.form-inline#pingForm(action="#", method="post")
       .form-group.has-feedback#hostInput
         input.form-control.ping#host(type="text", name="host", size="48", value="")
@@ -19,20 +18,15 @@ block content
           each row in groups
             option(value=row.name)= row.name
       .form-group#submitInput
-        button.btn.btn-success#pingBtn(type="submit") Ping
+        button.btn.btn-primary#pingBtn(type="submit") Ping
     .instructions Enter a host name or an IP address, e.g.
       a.example#host(href="#") google.com
       | or
       a.example#ip(href="#")= exampleIp
       | (results are in milliseconds)
-  div(style='padding: 10px; text-align: center;')
-    script.
-      var cpmstar_rnd=Math.round(Math.random()*999999);
-      var cpmstar_pid=30088;
-      document.writeln("<SCR"+"IPT language='Javascript' src='//server.cpmstar.com/view.aspx?poolid="+cpmstar_pid+"&script=1&rnd="+cpmstar_rnd+"'></SCR"+"IPT>");
   #pingResultWrapper.wrapper.hidden
     #pingResults.results
-      table#pingTable.table.table-bordered
+      table#pingTable.table.table-striped
         thead
           tr
             th(style='width:1%;')
@@ -59,14 +53,3 @@ block content
             td.terminus.max.text-right -
             td.terminus.avg.text-right -
             td.terminus.loss.text-right -
-  .our-disqus
-    #disqus_thread
-    script.
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'pingms'; // required: replace example with your forum shortname
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function() {
-        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
