--- a/main/views/peers.jade
+++ b/main/views/peers.jade
@@ -2,7 +2,7 @@ extends layout
 block content
   .bots
     h2 Peers
-    table.table.table-bordered
+    table.table.table-striped
       tr
         th(colspan='2') Location
         th Host
@@ -27,16 +27,3 @@ block content
               = moment(row.metrics.dateSeen).fromNow()
             else
               | (never)
-  .our-disqus
-    #disqus_thread
-    script.
-      /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-      var disqus_shortname = 'pingms'; // required: replace example with your forum shortname
-      /* * * DON'T EDIT BELOW THIS LINE * * */
-      (function(){
-        var dsq = document.createElement('script');
-        dsq.type = 'text/javascript';
-        dsq.async = true;
-        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-      })();
