--- a/main/views/layout.jade
+++ b/main/views/layout.jade
@@ -9,11 +9,11 @@ html
       meta(property='og:url', content='http://ping.ms/')
       meta(property='og:site_name', content='Ping.ms')
       meta(property='og:title', content='#{pageTitle || "Ping.ms"}')
-      meta(property='og:description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
+      meta(property='og:description', content='Free real time online ping test at ping.ms. Try our live ping test!')
       meta(property='og:image', content='http://ping.ms/images/pingms-icon.png')
       meta(property='fb:app_id', content='1503375086562896')
-      meta(name='keywords', content='ping test, ping, traceroute, reverse traceroute, online ping, remote ping, server, web site, website speed, network speed, traceroutes, ping website')
-      meta(name='description', content='ping.ms offers free online ping and free online traceroute service with multiple locations worldwide.')
+      meta(name='keywords', content='Online Ping Test, Real Time Ping Test, Live Ping Test, Free Ping Test')
+      meta(name='description', content='Free real time online ping test at ping.ms. Try our live ping test!')
     title #{pageTitle || 'Online Ping Test, Online Trace Route, Internet Test'}
     block css
       link(rel='stylesheet', href='//bowercdn.net/c/html5-boilerplate-4.3.0/css/normalize.css')
@@ -33,7 +33,7 @@ html
     #header
       #title
         p#description
-          | Free Online Ping Test at Ping.ms
+          | Free real time online ping test at ping.ms. Try our live ping test!
         h1#logo
           a(href="/") ping.ms
     //main content
